[package]
name = "UPKG"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "UPKG is a \"universal\" package manager for linux."
rust-version="1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
libupkg = {git = "https://github.com/Universal-Packaging-Tool/libupkg", branch = 'master'}
[dependencies]
libupkg = {git = "https://github.com/Universal-Packaging-Tool/libupkg", branch = 'stable'}