[package]
name = "upkg"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "UPKG is a \"universal\" package manager for linux."
rust-version="1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libupkg = {path ="../libupkg"}